--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Namaste react course",
   "main": "App.js",
   "scripts": {
-    "start":"parcel index.html",
-    "build":"parcel build index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -25,9 +25,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0"
   },
-  "browserslist":[
+  "browserslist": [
     "last 2 versions"
   ]
 }
