--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
@@ -38,7 +40,6 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.0"
   },
-  
   "browserslist": [
     "last 2 versions"
   ]
